c/examples/writing-a-c-compiler-tests/tests/chapter_16/invalid_parse/invalid_type_specifier_2.c
int main(void) {
    // cannot combine char with any other type specifier
    // except signed and unsigned
    char static long x = 0;
    return 0;
}